syntax = "proto3";

package auth;

service AuthService {
	rpc Login(LoginDTO) returns (Tokens);
	rpc Register(RegisterDTO) returns (Tokens);
	rpc RefreshTokens(RefreshTokenDTO) returns (Tokens);
	rpc Logout(LogoutDTO) returns (Empty); 
};

message Empty {}

message LogoutDTO {
	string userId = 1;
};

message RefreshTokenDTO {
	string userId = 1;
	string refreshToken = 2;
};

message LoginDTO {
	string email = 1;
	string password = 2;
}

message RegisterDTO {
	string email = 1;
	string password = 2;
	string displayName = 3;
}

message Tokens {
	string accessToken = 1;
	string refreshToken = 2;
};
